<resources>
    <string name="app_name">Chama Policia</string>
    <string name="tv_login_title">Login</string>
    <string name="btn_reg_login">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_btn_login">Login</string>
    <string name="text_activity_main_login">Entre na sua conta ou Cadastre-se</string>
    <string name="text_login">Entrar</string>
    <string name="text_signup">Cadastrar</string>
    <string name="text_hint_email_or_username">Email ou Nome de Usuário</string>
    <string name="text_hint_password">Senha</string>
    <string name="text_forget_password">Esqueceu sua senha?</string>
    <string name="text_or">ou</string>
    <string name="text_hint_confirm_password">Confirme a senha</string>
    <string name="text_home_activity">Bem vindo!</string>
</resources>